# manus-prompts

Assan/Architecture-PPT/source/: Assan_Architecture_Documentation.docx  DELIVERABLES_SUMMARY.md  INTERFACE_INVENTORY.md  (+4 more)
Manus/Tools/QMeter-Comparision/source/: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
Manus/Tools/QMeter-Comparision/source/.github/workflows/: ci.yml
Manus/Tools/QMeter-Comparision/source/docs/: DATA_DICTIONARY.md  DEV_GUIDE.md  RUNBOOK.md
Manus/Tools/QMeter-Comparision/source/examples/: labels.example.yaml  metric_rules.example.yaml
Manus/Tools/QMeter-Comparision/source/qmeter_analyzer/: __init__.py  __main__.py  cli.py  ingest.py  models.py  normalize.py
Manus/Tools/QMeter-Comparision/source/qmeter_analyzer/adapters/: __init__.py  adapter_fallback.py  adapter_v1.py  adapter_v2.py  base.py  registry.py
Manus/Tools/QMeter-Comparision/source/qmeter_analyzer/analytics/: __init__.py  compare.py  findings.py  stability.py
Manus/Tools/QMeter-Comparision/source/qmeter_analyzer/utils/: numeric.py
Manus/Tools/QMeter-Comparision/source/qmeter_analyzer/writers/: __init__.py  excel_writer.py  html_writer.py  json_writer.py
Manus/Tools/QMeter-Comparision/source/release/: checksums.txt
Manus/Tools/QMeter-Comparision/source/tests/: test_adapters.py  test_numeric.py
No-Middleware-Assan/: Integration_Design_Document.docx  README.md  original_prompt.txt
No-Middleware-Assan/diagrams/: 1_sap_to_quintiq.mmd  2_quintiq_to_apriso.mmd  3_apriso_to_quintiq_sap.mmd  4_batch_master_data.mmd  5_error_handling.mmd  6_idempotency_check.mmd
(+33 files in other folders)
