[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qmeter-analyzer"
version = "1.0.0"
description = "Enterprise-grade DELMIA Quintiq QMeter performance analysis tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "QMeter Analyzer Team"},
]
dependencies = [
    "openpyxl>=3.1.0",
    "pyyaml>=6.0",
    "python-docx>=0.8.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
qmeter-analyze = "qmeter_analyzer.cli:main"

[tool.setuptools.packages.find]
include = ["qmeter_analyzer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
